// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/posts-lookup/mock FindByHashtag when searching latest posts by hashtag #apis should succeed 1`] = `
Ok {
  "value": Object {
    "nextPage": "next:QVFIUjc2Y01oQ3F1bHk5WHNzNVVuS2ZAMSEtpdkxmbC1FV09XcGNmTUc4ZAkhrMlBPU19LYkM0dFY4RjZAKY3pYU1VMNll5Y24zcGhWS2pIUUVlSFBuTFI4X3haVmQ2amxtTU83R3JMRDJFd1hhUWJ0RWxfZAjN2ZAE51b2FBckhtZAG04SDN3",
    "posts": Array [
      Object {
        "attachments": Array [
          Object {
            "title": "Photos on timeline",
            "type": "photo",
            "url": "https://www.facebook.com/sftest7904/photos/a.121467247037625/122332100284473/?type=3",
          },
        ],
        "author": Object {
          "id": "1466796521412771840",
          "username": "superface_test",
        },
        "createdAt": "2022-01-07T15:43:27+0000",
        "id": "110658944785122_122332100284473",
        "text": "Post with attachments and #hashtag",
        "url": "https://www.facebook.com/sftest7904/photos/a.121467247037625/122332100284473/?type=3",
      },
      Object {
        "attachments": Array [],
        "author": Object {
          "id": "1466796521412771840",
          "username": "superface_test",
        },
        "createdAt": "2022-01-20T12:15:45+0000",
        "id": "110658944785122_125744069943276",
        "text": "Simple text post wiht #hashtag.",
        "url": "https://www.facebook.com/110658944785122/posts/125744069943276/",
      },
    ],
  },
}
`;

exports[`social-media/posts-lookup/mock FindByMention when searching latest posts by mentions should succeed 1`] = `
Ok {
  "value": Object {
    "posts": Array [
      Object {
        "attachments": Array [],
        "author": Object {
          "id": "1466796521412771840",
          "username": "superface_test",
        },
        "createdAt": "2022-01-20T12:15:45+0000",
        "id": "110658944785122_125744069943276",
        "replyId": "110658944785122_125744069943276",
        "text": "Post with mention",
        "url": "https://www.facebook.com/110658944785122/posts/125744069943276/",
      },
    ],
  },
}
`;
